# AI-Video-Agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
ai_video_agent/: __init__.py  agent.py  cli.py  config.py  gui.py  image_agent.py  image_llm.py  llm.py  timeline_optimizer.py  video_analysis.py
docs/: editing_request_template.md  timeline_schema.md
inputs/scripts/: sample_brief.md
